ngFor now works

--- a/client/src/app/movies/movies.component.html
+++ b/client/src/app/movies/movies.component.html
@@ -1,6 +1,8 @@
 <ul>
-  <li *ngFor="let movie of result">
-    {{movie}}
+  <li *ngFor="let movie of films">
+    {{movie.original_title}}
+    ( {{movie.id}} )
+    
   </li>
 </ul>
 
