--- a/client/src/app/menu/menu.component.html
+++ b/client/src/app/menu/menu.component.html
@@ -1,1 +1,12 @@
-<p>test menu</p>
+<head>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+
+</head>
+<ul>
+  <li><a class="active" href="#">Home</a></li>
+  <li><a href="#">Movies</a></li>
+  <li><a href="#">Genres</a></li>
+  <li class="user"><a  href="#"><i class="fas fa-user-circle"></i> Users</a></li>
+</ul>
+
+
