--- a/client/src/app/movies/movies.component.html
+++ b/client/src/app/movies/movies.component.html
@@ -1,5 +1,5 @@
-<ul>
-  <li *ngFor="let movie of films">
+<ul class="listMovies">
+  <li *ngFor="let movie of films" class="MovieSheet">
 
 
     <span class="title">{{movie.original_title}}</span> <br>
