--- a/client/src/app/movies/movies.component.css
+++ b/client/src/app/movies/movies.component.css
@@ -1,3 +1,12 @@
 .title {
   font-weight: bold;
 }
+
+ul.listMovies {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+li.MovieSheet {
+  list-style: none;
+}
