--- a/client/src/app/movies/movies.component.css
+++ b/client/src/app/movies/movies.component.css
@@ -5,8 +5,13 @@
 ul.listMovies {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 50px;
+  grid-row-gap: 50px;
 }
 
 li.MovieSheet {
   list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
