--- a/client/src/app/movies/movies.component.css
+++ b/client/src/app/movies/movies.component.css
@@ -1,5 +1,7 @@
 .title {
   font-weight: bold;
+  padding-top: 20px;
+  border-top: 1px solid lightgrey;
 }
 
 ul.listMovies {
@@ -17,6 +19,8 @@ li.MovieSheet {
   flex-direction: column;
   align-items: center;
 }
+
+
 
 span.overview {
   width: 50%;
