--- a/client/src/app/movies/movies.component.css
+++ b/client/src/app/movies/movies.component.css
@@ -4,7 +4,7 @@
   border-top: 1px solid lightgrey;
 }
 
-ul.listMovies {
+.listMovies {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 50px;
@@ -13,7 +13,7 @@ ul.listMovies {
   padding: 0;
 }
 
-li.MovieSheet {
+.MovieSheet {
   list-style: none;
   display: flex;
   flex-direction: column;
