--- a/client/src/app/movies/movies.component.css
+++ b/client/src/app/movies/movies.component.css
@@ -6,11 +6,18 @@
 
 .listMovies {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-column-gap: 10px;
+  grid-template-columns: 1fr;
+
   grid-row-gap: 10px;
   margin: 50px 0;
   padding: 0;
+}
+
+.row {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-column-gap: 10px;
 }
 
 .MovieSheet {
