--- a/client/src/app/movies/movies.component.css
+++ b/client/src/app/movies/movies.component.css
@@ -25,6 +25,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 1px solid lightgrey;
+    padding: 10px 0;
 }
 
 
@@ -41,4 +43,13 @@ span.overview {
 .img img {
   display: block;
   object-fit: cover;
+}
+
+
+a.buttonMore {
+  text-decoration: none;
+  text-transform: uppercase;
+  border: 1px solid;
+  padding: 10px;
+  color: orange;
 }
