--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-body {
+body, html {
   margin: 0;
   padding: 0;
+  font-family: 'Quicksand', sans-serif;
 }
