--- a/client/src/app/movies/movies.component.html
+++ b/client/src/app/movies/movies.component.html
@@ -6,7 +6,7 @@
           <span class="title">{{movie.original_title}}</span> <br>
           <span class="img"> <img src="https://image.tmdb.org/t/p/w300/{{movie.poster_path}}" alt="{{movie.original_title}}">  </span><br>
           <span class="overview">{{movie.overview}}</span>
-          <a href="{{movie.id}}" class="buttonMore">En savoir plus</a>
+          <a href="{{movie.id}}" class="buttonMore">En savoir +</a>
 
       </div>
 
