--- a/client/src/app/menu/menu.component.html
+++ b/client/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <ul class="navheader">
   <li><a class="active" href="#">Home</a></li>
-  <li><a href="#">Movies</a></li>
+  <li><a href="#">Movies({{count}})</a></li>
   <li><a href="#">Genres</a></li>
   <li class="user"><a  href="#"><i class="fas fa-user-circle"></i> Users</a></li>
 </ul>
