--- a/client/src/app/post/post.component.html
+++ b/client/src/app/post/post.component.html
@@ -1,3 +1,51 @@
-<p>
-  post works!
-</p>
+<form action="" method="post">
+  <label for="original_title">original title :
+  </label>
+  <input type="text" name="original_title" id="">
+
+
+  <label for="title">title :
+  </label>
+  <input type="text" name="title" id="">
+
+
+  <label for="id">Unique id :
+  </label>
+  <input type="text" name="id" id="">
+
+
+  <label for="video">Trailers :
+  </label>
+  <input type="radio" name="video" value="True" checked> True<br>
+  <input type="radio" name="video" value="False"> False<br>
+
+  <label for="poster_path">Url Poster
+  </label>
+  <input type="text" name="poster_path" id="">
+
+  <label for="original_language">original language :
+  </label>
+  <input type="text" name="original_language" id="">
+
+  <label for="genre_ids">Genre :
+  </label>
+  <input type="radio" name="genre_ids" value="12" checked> Action<br>
+  <input type="radio" name="genre_ids" value="14"> Adventure<br>
+  <input type="radio" name="genre_ids" value="28"> Fantastique<br>
+
+  <label for="adult">adult :
+  </label>
+  <input type="radio" name="adult" value="True" checked> True<br>
+  <input type="radio" name="adult" value="False"> False<br>
+
+  <label for="overview">overview :
+  </label>
+  <input type="text" name="overview" id="">
+
+
+  <label for="date">overview :
+  </label>
+  <input type="date" name="date" id="">
+
+
+</form>
