--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-menu></app-menu>
 <app-movies></app-movies>
+<app-post></app-post>
 
