--- a/client/src/app/post/post.component.html
+++ b/client/src/app/post/post.component.html
@@ -27,7 +27,7 @@
   </label>
   <input type="text" name="original_language" id="">
 
-  <label for="genre_ids">Genre :
+  <label for="genre_ids">Genre tata:
   </label>
   <input type="radio" name="genre_ids" value="12" checked> Action<br>
   <input type="radio" name="genre_ids" value="14"> Adventure<br>
