--- a/client/src/app/post/post.component.html
+++ b/client/src/app/post/post.component.html
@@ -1,4 +1,4 @@
-<form action="" method="post">
+<form action="" method="post" id="moviePost">
   <label for="original_title">original title :
   </label>
   <input type="text" name="original_title" id="">
@@ -47,5 +47,5 @@
   </label>
   <input type="date" name="date" id="">
 
-
+  <button type="submit" form="moviePost" value="Submit">Submit</button>
 </form>
