--- a/client/src/app/menu/menu.component.html
+++ b/client/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <ul class="navheader">
-  <li><a class="active" href="#">Home</a></li>
-  <li><a href="#">Movies({{count}})</a></li>
-  <li><a href="#">Genres</a></li>
+  <!-- <li><a class="active" [routerLink]="['/home']">Home</a></li> -->
+  <li><a class="active" [routerLink]="['/movies']">Movies({{count}})</a></li>
+  <li><a [routerLink]="['/post']">Add a movie</a></li>
   <li class="user"><a  href="#"><i class="fas fa-user-circle"></i> Users</a></li>
 </ul>
 
