--- a/client/src/app/post/post.component.html
+++ b/client/src/app/post/post.component.html
@@ -47,5 +47,5 @@
   </label>
   <input type="date" name="date" id="">
 
-  <button type="submit" form="moviePost" value="Submit">Submit</button>
+  <button ng-click='postMovies()' type="submit" form="moviePost" value="Submit">Submit</button>
 </form>
