--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,4 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-menu></app-menu>
-<router-outlet></router-outlet>
+<app-movies></app-movies>
+<app-movie></app-movie>
+<app-post></app-post>
 
