fusion code gilles

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,2 @@
-<!--The content below is only a placeholder and can be replaced.-->
 <app-menu></app-menu>
-<app-movies></app-movies>
-<app-movie></app-movie>
-<app-post></app-post>
-
+<router-outlet></router-outlet>
