--- a/client/src/app/menu/menu.component.css
+++ b/client/src/app/menu/menu.component.css
@@ -1,22 +1,25 @@
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
+
 .navheader {
   list-style-type: none;
   margin: 0;
   overflow: hidden;
   background-color: #2c3e50;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 5;
 }
-.navheader li{
+
+.navheader li {
   float: left;
 }
 
-.navheader li:last-child{
+.navheader li:last-child {
   float: right;
 }
 
@@ -33,7 +36,8 @@
   background-color: #111;
   border-bottom: 1px solid red;
 }
-.user{
-  float:right;
+
+.user {
+  float: right;
   padding-right: 40px;
 }
